--- a/templates/home.html
+++ b/templates/home.html
@@ -23,5 +23,24 @@
       <p class="error"></p>
     </form>
   </div>
+
+  <div class="signup_container">
+    <h1>Login</h1>
+    <form id="login_form" name="login_form" action="">
+      <div class="input">
+        <label for="email">Email</label>
+        <input type="email" name="email" class="field" required />
+      </div>
+
+      <div class="input">
+        <label for="password">Password</label>
+        <input type="password" name="password" class="field" required />
+      </div>
+
+      <input type="submit" value="Log In" class="btn" />
+
+      <p class="error"></p>
+    </form>
+  </div>
 </div>
 {% endblock %}
